--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aioboto3>=15.5.0",
     "aiohttp>=3.13.2",
     "pydantic>=2.12.4",
     "pydantic-settings>=2.12.0",
@@ -12,7 +13,7 @@ dependencies = [
 ]
 
 [tool.setuptools.packages.find]
-include = ["app*"]
+include = ["src*"]
 exclude = ["tmp*"]
 
 [project.optional-dependencies]
